Correccion y Mejoras de Endpoints.